if WANT_ALL
  CPP_EXTENSION = cpp
  PYTHON_EXTENSION = python
  RUBY_EXTENSION = ruby
  PHP_EXTENSION = php
  WSBINDING_EXTENSION = ws
  SCABINDING_EXTENSION = sca
endif
if WANT_CPP
  CPP_EXTENSION = cpp
endif
if WANT_PYTHON
  PYTHON_EXTENSION = python
endif
if WANT_RUBY
  RUBY_EXTENSION = ruby
endif
if WANT_PHP
  PHP_EXTENSION = php
endif
if WANT_WSBINDING
  WSBINDING_EXTENSION = ws
endif
if WANT_SCABINDING
  SCABINDING_EXTENSION = sca
endif
SUBDIRS = ${CPP_EXTENSION} ${WSBINDING_EXTENSION} ${SCABINDING_EXTENSION} ${PYTHON_EXTENSION} ${RUBY_EXTENSION} ${PHP_EXTENSION}
